feat: optimize workflows to conserve GitHub Actions minutes
- Disabled 12 non-essential workflows (fast-tests, tests-nightly, code-quality, security-scan, contract-tests, status-dashboard, deploy, deploy-frontend, create-release, docs-check, tests.yml)
- Made E2E tests manual-only (workflow_dispatch)
- Removed debug test-minimal.yml workflow
- Added comprehensive paths-ignore to unit-tests.yml to skip doc/script changes
- Reduced from 14 active workflows to 2 (unit-tests + e2e manual)

This will dramatically reduce Actions minutes consumption while maintaining
essential testing on PRs. E2E tests can be run manually when needed.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,11 +1,7 @@
 name: End-to-End Tests
 
 on:
-  push:
-    branches: [main, master, develop]
-  pull_request:
-    branches: [main, master, develop]
-  workflow_dispatch:
+  workflow_dispatch:  # Manual trigger only to conserve Actions minutes
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
